Signed-off-by: cmnewfan <906344660@qq.com>

--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Trial version</title>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=GBK" /><title>Trial version</title>
 <meta http-equiv="Content-Style-Type" content="text/css">
 <style type="text/css"><!--
 body {
   margin: 5px 5px 5px 5px;
   background-color: #ffffff;
 }
-/* ========== Text Styles ========== */
+/* ========== Text Styles Test ========== */
 hr { color: #000000}
 body, table /* Normal text */
 {
